<resources>
    <string name="app_name">Food Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open_table_restaurant">Open Table Restaurant</string>
    <string name="explore_your_fav_foods">Explore Your Fav Foods</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="chathurikawijesooriya_gmail_com">chathurikawijesooriya@gmail.com</string>
    <string name="s_t_c">S T C</string>
    <string name="log_out">Log Out</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="product_name">Product Name</string>
    <string name="_5_0">5.0</string>
    <string name="your_favourite_and_tasty_food_is_here">your favourite and tasty food is here!</string>
    <string name="view_more">view more</string>
    <string name="make_order">Make Order</string>
</resources>