<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.chathu.foodapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_daily_meal"
        android:name="com.chathu.foodapplication.ui.gallery.DailyMealFragment"
        android:label="@string/daily_meal"
        tools:layout="@layout/daily_meal_fragment" />

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.chathu.foodapplication.ui.slideshow.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite" />
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.chathu.foodapplication.CartFragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_cart" />
</navigation>