<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/IVBackImageReg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg4"
        android:scaleType="centerCrop"
        android:foreground="@drawable/foreground_design"/>

    <TextView
        android:id="@+id/TVTitleReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_table_restaurant"
        android:textColor="@color/white"
        android:textSize="33sp"
        android:fontFamily="@font/lobster"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/IVBackImageReg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".2"/>

    <TextView
        android:id="@+id/TVDescReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="#FBFBFB"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVTitleReg" />

    <EditText
        android:id="@+id/ETFullNReg"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:textColorHint="@color/white"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="13dp"
        android:backgroundTint="#CCCCCC"
        android:layout_marginTop="30dp"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVDescReg"/>

    <EditText
        android:id="@+id/ETEmailReg"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:textColorHint="@color/white"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="13dp"
        android:backgroundTint="#CCCCCC"
        android:layout_marginTop="30dp"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETFullNReg"/>

    <EditText
        android:id="@+id/ETPasswordReg"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="13dp"
        android:backgroundTint="#CCCCCC"
        android:layout_marginTop="30dp"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETEmailReg"/>

    <Button
        android:id="@+id/BnRegisterReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textColor="@color/white"
        android:padding="14dp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:background="@drawable/btn_bg_design"
        android:theme="@style/Theme.FoodApplication.Button"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETPasswordReg"
        app:layout_constraintVertical_bias="0.7"/>

    <TextView
        android:id="@+id/TVAlreadyReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already Registered ?"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#FBFBFB"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BnRegisterReg"
        app:layout_constraintHorizontal_bias=".4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TVAlreadyReg"
        app:layout_constraintTop_toBottomOf="@+id/BnRegisterReg"
        app:layout_constraintHorizontal_bias="0"/>

</androidx.constraintlayout.widget.ConstraintLayout>