<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/IVBackImage"
        android:foreground="@drawable/foreground_design"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg2"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/TVTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_table_restaurant"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".4"
        android:fontFamily="@font/lobster"/>

    <TextView
        android:id="@+id/TVDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/explore_your_fav_foods"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVTitle"/>

    <Button
        android:id="@+id/BnRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        android:text="Register"
        android:textColor="@color/white"
        android:padding="14dp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVDesc"
        app:layout_constraintVertical_bias=".7"
        android:background="@drawable/btn_bg_design"
        android:theme="@style/Theme.FoodApplication.Button"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="#FBFBFB"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BnRegistration"
        android:textAlignment="center"
        android:background="@drawable/btn_bg_design"/>

</androidx.constraintlayout.widget.ConstraintLayout>